# learning

./: .env copy.example  .gitignore  CHANGELOG.md  DECISION.md  Exported_Grouped_Strategies_20260527.csv  Exported_Grouped_Strategies_20260529.csv  Exported_Grouped_Strategies_20260530.csv  MASTER_CONTEXT.md  PROJECT_STRUCTURE.md  README.md  SESSION.md  STRATEGY.md  TASKS.md  YFINANCE_FIX_GUIDE.md  check_data_sources.py  check_yfinance_fixed.py  lerarning.py  main.py  nse_charting_response_TCS.json  nse_data_fetcher.py  pyproject.toml  scan_profile.prof  screener_v2.py  test_fyers.py  tests_baseline.txt
.antigravitycli/: 0fcb7578-c074-4172-97a5-ec9e2d1d82a3.json
docs/: architecture_review.md  screener_analysis_logic.md  strategies.md
fyers/api/: auth_api.py  data.py  funds.py  margin_api.py  order_api.py
fyers/database/: master_contract_db.py
fyers/mapping/: margin_data.py  order_data.py  transform_data.py
fyers/streaming/: fyers_adapter.py  fyers_hsm_websocket.py  fyers_mapping.py  fyers_token_converter.py  fyers_websocket_adapter.py
scratch/: EQ_MASTER_PLAN.md  analyze_excel.py  analyze_excel2.py  audit_output.txt  check_nse_chart.py  check_yfinance.py  data_quality_audit.py  detailed_audit.py  extracting-market-mood-index-mmi-from-tickertape-using-python-code-2.py  fix_mypy.py  fix_mypy2.py  fix_mypy3.py  how-to-find-out-the-moving-average-slope-angle-trend-using-python-code-1.py  nse_analytics_improvement_plan.md  nse_charting_fetcher.py  nse_equity_master_builder.py  refactor_imports.py  sheet1.csv  sheet2.csv  sheet3.csv  split_main.py  tesr.py  test_eq_masters.py  test_eq_masters_urls.py  test_eq_masters_with_session.py  test_historical_chart.py  test_mmi.py  test_nse.py  test_nse_api_token.py  test_nse_autocomplete.py  test_nse_charting.py  test_nse_cm_equity.py  test_nse_html.py  test_reliance_real.py  test_sync_tcs.py  test_tcs_token_forall.py  the-markets-coiled-spring-building-the-momentum-squeeze-indicator-in-python-code-10.txt  yfinance_diagnostic.py
scratch/sample/: Automated Stock Screener with BOH.xlsx  Buy Low Sell High Trading System With BOH.xlsx  Copy of DMADMA For Reverse Traders .xlsx  Copy of DMADMA For Without Stop Loss Traders .xlsx  OV Proven & Tested methods & Strategies .xlsx  Turtle Trading With BOH.xlsx  a-python-utility-to-fetch-live-data-from-nse-india-website-code-2.py  (+5 more)
scripts/: profile_scan.py
src/: screener.py
tests/: __init__.py  test_backtester.py  test_bhavcopy_incremental.py  test_daily_signal_reporter.py  test_darvas_box.py  test_downloader.py  test_fo_ban.py  test_fyers_fetcher.py  test_historical_sync.py  test_minervini_screener.py  test_ml_classifier.py  test_ml_gatekeeper.py  test_new_strategies.py  test_nifty_index_fetcher.py  test_nifty_ki_dukan.py  test_nse_charts.py  test_pair_scanner.py  test_portfolio.py  test_query_engine.py  test_risk_metrics.py  test_rsi_scanner.py  test_scoring.py  test_screener.py  test_signal_protocol.py  test_ta_indicators.py  test_volatility_regime.py
(+86 files in other folders)
