[project]
name = "learning"
version = "1.0.0"
description = "Download and process NSE Bhavcopy data locally in English"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas==2.2.3",
    "requests==2.32.3",
    "ta-lib>=0.6.8",
    "yfinance==1.4.0",
    "pyarrow==19.0.1",
    "pandas-market-calendars>=5.4.0",
    "rich>=15.0.0",
    "tabulate>=0.10.0",
    "selenium>=4.44.0",
    "webdriver-manager>=4.1.1",
    "scikit-learn>=1.8.0",
    "vectorbt>=1.0.0",
    "arch>=7.0.0",
    "statsmodels>=0.14.0",
    "duckdb==1.1.3",
]

[dependency-groups]
dev = [
    "pytest==8.2.2",
    "pytest-cov==5.0.0",
    "ruff==0.4.9",
    "mypy==1.10.0",
    "types-requests==2.32.0.20240602",
]

[tool.app]
raw_dir = "data/raw"
processed_dir = "data/processed"
max_days_back = 7
top_n_stocks = 250
bottom_out_tolerance = 0.5
bounce_buffer = 1.0

[tool.sharegenius.scanner]
max_workers = 0  # 0 = auto (CPU count)
symbols_per_worker = 50

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [
    "scratch",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "RUF",  # Ruff-specific rules
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = 'scratch'
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
implicit_reexport = false
strict_equality = true
ignore_missing_imports = true
